--- a/intune/app/src/main/res/layout/activity_songs_list.xml
+++ b/intune/app/src/main/res/layout/activity_songs_list.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     tools:context=".SongsList">
     <TextView
         android:layout_width="match_parent"
@@ -18,4 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lst_songs"></ListView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back"
+        android:id="@+id/back">
+    </Button>
 </LinearLayout>
