--- a/intune/app/src/main/res/layout/row_listview_songs.xml
+++ b/intune/app/src/main/res/layout/row_listview_songs.xml
@@ -1,38 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="80dp"
     android:weightSum="4"
     android:layout_margin="10dp">
-    <TextView
-        android:gravity="center_horizontal"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_name"
-        android:text="name"></TextView>
-    <TextView
-        android:gravity="center_horizontal"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_rate"
-        android:text="rating"></TextView>
-    <TextView
-        android:gravity="center_horizontal"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_style"
-        android:text="style"></TextView>
-    <TextView
-        android:gravity="center_horizontal"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_composer"
-        android:text="composer"></TextView>
 
+    <TextView
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:id="@+id/tv_name"
+        android:textSize="30dp"
+        android:text="name"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+    <TextView
+        android:gravity="left|center"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/tv_rate"
+        android:textSize="20dp"
+        android:text="rating"/>
+    <TextView
+        android:gravity="left|center"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/tv_style"
+        android:textSize="20dp"
+        android:text="style"/>
+    <TextView
+        android:gravity="left|center"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/tv_composer"
+        android:textSize="20dp"
+        android:text="composer"/>
+    </LinearLayout>
 
 </LinearLayout>
